--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <!-- RiskBox Application -->
     <script src="js/globals.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/risktype.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/products.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/vbw.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/euf.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/vbw_product.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/ir.js" type="text/javascript" charset="utf-8"></script>
 
     <script src="js/app.js" type="text/javascript" charset="utf-8"></script>
 
