--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,15 @@
     <script src="js/app.js" type="text/javascript" charset="utf-8"></script>
 
 
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="/__/firebase/6.6.1/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#reserved-urls -->
+
+    <!-- Initialize Firebase -->
+    <script src="/__/firebase/init.js"></script>
+
     <style>
         .app_button button {
             padding: 0;
